@@ -1,4 +1,4 @@
-# Copyright (C) 2008, 2009, 2010 EPITA Research and Development
+# Copyright (C) 2008, 2009, 2010, 2011 EPITA Research and Development
 # Laboratory (LRDE)
 #
 # This file is part of Olena.
@@ -20,5 +20,7 @@ include $(top_srcdir)/milena/tools/tools.mk
 bin_PROGRAMS =					\
   seed2tiling 					\
   area_flooding
+
+noinst_PROGRAMS = compute_local_configurations
 
 # FIXME: Add some tests for these tools.
